modules/apps/frontend-data-set/frontend-data-set-web/src/main/resources/META-INF/resources/styles/_side_panel.scss
.fds-side-panel {
	background-color: #f1f2f5;
	bottom: 0;
	box-shadow: 0 0 0 rgba(39, 40, 51, 0.15);
	position: fixed;
	right: 0;
	top: 0;
	transform: translateX(100%);
	transition: transform ease 500ms, box-shadow ease 500ms, width ease 500ms;
	width: 70%;
	will-change: transform, box-shadow, opacity, width;
	z-index: 999;

	iframe {
		height: 100%;
		width: 100%;
	}

	.loader {
		align-items: center;
		bottom: 0;
		display: flex;
		justify-content: center;
		left: 0;
		position: absolute;
		right: 0;
		top: 0;
		z-index: 10;
	}

	&.is-hidden:not(.is-moving) {
		visibility: hidden;
	}

	&:not(.is-loading) .loader {
		opacity: 0;
		pointer-events: none;
		transition: all ease 200ms;
	}

	&.is-loading iframe {
		display: none;
	}

	&.is-visible {
		box-shadow: -10px 20px 30px rgba(39, 40, 51, 0.15);
		transform: translateX(0);
		visibility: visible;
	}

	&.fds-side-panel-xs {
		width: 25%;
	}

	&.fds-side-panel-sm {
		width: 33%;
	}

	&.fds-side-panel-md {
		width: 50%;
	}

	&.fds-side-panel-lg {
		width: 66%;
	}

	&.fds-side-panel-xl {
		width: 75%;
	}

	&.fds-side-panel-full {
		width: 100%;
	}

	.nav {
		border-bottom: 1px solid #dddee7;
	}

	.fds-side-menu {
		border-bottom-width: 0;
		bottom: 0;
		display: flex;
		flex-direction: column;
		justify-content: center;
		position: absolute;
		right: 100%;
		top: 0;
	}

	.tab-content,
	.tab-pane {
		height: 100%;
		position: relative;
		z-index: 1;
	}

	.fds-side-panel-close {
		opacity: 0.5;
		position: absolute;
		right: 0;
		top: 0;
		transition: top ease-in-out 0.1s, right ease-in-out 0.1s,
			opacity ease-in 0.2s;
		z-index: 10;

		&.fds-side-panel-close-menu {
			opacity: 1;
			right: 16px;
			top: 4px;
		}

		&.fds-side-panel-close-simple {
			opacity: 1;
			right: 20px;
			top: 29px;
		}
	}
}

.fds-side-panel-nav-cover {
	background: white;
	left: 0;
	opacity: 0;
	position: fixed;
	right: 0;
	transform: translateX(100%);
	transition: opacity 0.2s ease-in, transform 0.4s ease-in, left 0.4s ease-in;
	z-index: 988;

	body.open & {
		left: 320px;
	}

	&.is-visible {
		opacity: 1;
		transform: translateY(0%);
	}

	.nav-link {
		padding-bottom: 0.625rem;
		padding-top: 0.625rem;
	}
}

